Add simple positions endpoint and mongodb

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "RecWebDatabaseSettings": {
+    "PositionCollectionName": "Positions",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "RecWeb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
