--- a/backend/RecAPI/RecAPI.csproj
+++ b/backend/RecAPI/RecAPI.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.3" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.3" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
   </ItemGroup>
 
 </Project>
