Team resolvers, Queues and Mutations

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "RecWebDatabaseSettings": {
     "PositionCollectionName": "Positions",
+    "TeamCollectionName": "Teams",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
