Edit resolvers, models and repos

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -2,6 +2,7 @@
   "RecWebDatabaseSettings": {
     "PositionCollectionName": "Positions",
     "TeamCollectionName": "Teams",
+    "SectionCollectionName": "Sections",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
