Sections and teams, backend (#8)
* Team resolvers, Queues and Mutations

* Complete Teams

* Edit resolvers, models and repos

* Create section Repository

* Create Section input and Queries

* Add resolvers for Sections

* Section resolvers

* Restructure

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -1,6 +1,8 @@
 {
   "RecWebDatabaseSettings": {
     "PositionCollectionName": "Positions",
+    "TeamCollectionName": "Teams",
+    "SectionCollectionName": "Sections",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
