Add organization models, resolvers, queries and mutations

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -3,6 +3,7 @@
     "PositionCollectionName": "Positions",
     "TeamCollectionName": "Teams",
     "SectionCollectionName": "Sections",
+    "OrganizationCollectionName": "Organizations",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
