--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -4,6 +4,7 @@
     "TeamCollectionName": "Teams",
     "SectionCollectionName": "Sections",
     "OrganizationCollectionName": "Organizations",
+    "AdmisionPeriodeCollectionName": "AdmisionPeriode",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
