Organization and Admision periode (#10)
* Add organization models, resolvers, queries and mutations

* AdmisionPeriode

* Resolvers and stuff

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -3,6 +3,8 @@
     "PositionCollectionName": "Positions",
     "TeamCollectionName": "Teams",
     "SectionCollectionName": "Sections",
+    "OrganizationCollectionName": "Organizations",
+    "AdmisionPeriodeCollectionName": "AdmisionPeriode",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
