Add basic authentication and registration

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -5,6 +5,7 @@
     "SectionCollectionName": "Sections",
     "OrganizationCollectionName": "Organizations",
     "AdmisionPeriodeCollectionName": "AdmisionPeriode",
+    "AuthCollectionName": "AuthCredentials",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
