User authentication, registration and get information

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -6,6 +6,7 @@
     "OrganizationCollectionName": "Organizations",
     "AdmisionPeriodeCollectionName": "AdmisionPeriode",
     "AuthCollectionName": "AuthCredentials",
+    "UserCollectionName": "Users",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RecWeb"
   },
