--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -4,7 +4,8 @@
     "TeamCollectionName": "Teams",
     "SectionCollectionName": "Sections",
     "OrganizationCollectionName": "Organizations",
-    "AdmisionPeriodeCollectionName": "AdmisionPeriode",
+    "ApplicationCollectionName": "Applications",
+    "AdmisionPeriodeCollectionName": "AdmissionPeriod",
     "AuthCollectionName": "AuthCredentials",
     "UserCollectionName": "Users",
     "ConnectionString": "mongodb://localhost:27017",
