--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -14,6 +14,7 @@
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
