change order of sections on landingpage

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -5,7 +5,7 @@
     "SectionCollectionName": "Sections",
     "OrganizationCollectionName": "Organizations",
     "AdmisionPeriodeCollectionName": "AdmisionPeriode",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://10.0.0.31:27017",
     "DatabaseName": "RecWeb"
   },
   "Logging": {
