Resolve error in Application

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -1,14 +1,14 @@
 {
   "RecWebDatabaseSettings": {
-    "PositionCollectionName": "Positions",
-    "TeamCollectionName": "Teams",
-    "SectionCollectionName": "Sections",
+    "PositionCollectionName": "Positions2",
+    "TeamCollectionName": "Teams2",
+    "SectionCollectionName": "Sections2",
     "OrganizationCollectionName": "Organizations",
     "ApplicationCollectionName": "Applications",
     "AdmisionPeriodeCollectionName": "AdmissionPeriod",
     "AuthCollectionName": "AuthCredentials",
     "UserCollectionName": "Users",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://10.0.0.31:27017",
     "DatabaseName": "RecWeb"
   },
   "Logging": {
