Connection strings for database collections

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "RecWebDatabaseSettings": {
-    "PositionCollectionName": "Positions2",
-    "TeamCollectionName": "Teams2",
-    "SectionCollectionName": "Sections2",
+    "PositionCollectionName": "Positions",
+    "TeamCollectionName": "Teams",
+    "SectionCollectionName": "Sections",
     "OrganizationCollectionName": "Organizations",
     "ApplicationCollectionName": "Applications",
     "AdmisionPeriodeCollectionName": "AdmissionPeriod",
