Change favicons and tabname of site

--- a/frontend/src/public/manifest.json
+++ b/frontend/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ISFiT",
+  "name": "ISFiT Recruitment",
   "icons": [
     {
       "src": "favicon.ico",
