Update connection string

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -8,7 +8,7 @@
     "AdmisionPeriodeCollectionName": "AdmissionPeriod",
     "AuthCollectionName": "AuthCredentials",
     "UserCollectionName": "Users",
-    "ConnectionString": "mongodb://10.0.0.31:27017",
+    "ConnectionString": "mongodb://backend:v4qeYGFbqvXAeZSx@recrtuiment.isfit.org:27017",
     "DatabaseName": "RecWeb"
   },
   "Logging": {
