Clean up some resolvers

--- a/backend/RecAPI/appsettings.Development.json
+++ b/backend/RecAPI/appsettings.Development.json
@@ -1,9 +1,22 @@
 {
+  "RecWebDatabaseSettings": {
+    "PositionCollectionName": "Positions",
+    "TeamCollectionName": "Teams",
+    "SectionCollectionName": "Sections",
+    "OrganizationCollectionName": "Organizations",
+    "ApplicationCollectionName": "Applications",
+    "AdmisionPeriodesCollectionName": "AdmissionPeriod",
+    "AuthCollectionName": "AuthCredentials",
+    "UserCollectionName": "Users",
+    "ConnectionString": "mongodb://10.0.0.31:27017",
+    "DatabaseName": "RecWeb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
