Users mutations update

--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -8,6 +8,7 @@
     "AdmisionPeriodeCollectionName": "AdmissionPeriod",
     "AuthCollectionName": "AuthCredentials",
     "UserCollectionName": "Users",
+    "InterviewCollectionName": "Interviews",
     "ConnectionString": "mongodb://backend:v4qeYGFbqvXAeZSx@recruitment.isfit.org:27017",
     "DatabaseName": "RecWeb"
   },
