Add database purge option

--- a/backend/RecAPI/appsettings.Development.json
+++ b/backend/RecAPI/appsettings.Development.json
@@ -8,7 +8,7 @@
     "AdmisionPeriodesCollectionName": "AdmissionPeriod",
     "AuthCollectionName": "AuthCredentials",
     "UserCollectionName": "Users",
-    "ConnectionString": "mongodb://backend:v4qeYGFbqvXAeZSx@test-recruitment.isfit.org:27017",
+    "ConnectionString": "mongodb://10.0.0.31:27017",
     "DatabaseName": "RecWeb"
   },
   "Logging": {
