--- a/backend/LoadData/LoadData.csproj
+++ b/backend/LoadData/LoadData.csproj
@@ -10,6 +10,8 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <PackageReference Include="GraphQL.Client" Version="3.1.9" />
+    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.8" />
