--- a/backend/LoadData/LoadData.csproj
+++ b/backend/LoadData/LoadData.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\RecAPI\RecAPI.csproj" />
+  </ItemGroup>
+
 </Project>
