--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.3.0",
+    "react-countdown": "^2.2.2",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
