--- a/backend/LoadData/appsettings.json
+++ b/backend/LoadData/appsettings.json
@@ -2,5 +2,24 @@
   "data": {
     "directory": "data/positions/",
     "textExtention": "txt"
+  },
+  "admission": {
+    "connectionProperties": {
+      "baseUrl": "https://test-recruitment.isfit.org:5000/",
+      "email": "admin@isfit.com",
+      "password": "123456"
+    },
+    "organizationProperties": {
+      "organizationName": "isfit 2021",
+      "organizationDescription": "International student festival in Trondheim"
+    },
+    "admisionPeriodeProperties": {
+      "admisionPeriodeStartDate": "2020-10-11T10:00:00.000Z",
+      "admisionPeriodeEndDate": "2020-10-26T02:00:00.000Z",
+      "admisionPeriodeInterviewStart": "2020-10-22T00:00:00.000Z",
+      "admisionPeriodeInterviewEnd": "2020-11-07T00:00:00.000Z",
+      "minAppliedPositions": 1,
+      "maxAppliedPositions": 3
+    }
   }
 }
