--- a/backend/RecAPI/RecAPI.csproj
+++ b/backend/RecAPI/RecAPI.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.3" />
     <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="10.4.3" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.3" />
+    <PackageReference Include="HotChocolate.Subscriptions.InMemory" Version="10.5.3" />
     <PackageReference Include="HotChocolate.Types.Filters" Version="10.5.2" />
     <PackageReference Include="HotChocolate.Types.Sorting" Version="10.5.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.6" />
