--- a/backend/LoadData/appsettings.json
+++ b/backend/LoadData/appsettings.json
@@ -5,7 +5,7 @@
   },
   "admission": {
     "connectionProperties": {
-      "baseUrl": "https://recruitment.isfit.org:5000/",
+      "baseUrl": "http://localhost:5000/",
       "email": "admin@isfit.com",
       "password": "123456"
     },
