--- a/backend/RecAPI/appsettings.json
+++ b/backend/RecAPI/appsettings.json
@@ -9,7 +9,7 @@
     "AuthCollectionName": "AuthCredentials",
     "UserCollectionName": "Users",
     "InterviewCollectionName": "Interviews",
-    "ConnectionString": "mongodb://10.0.0.31:27017",
+    "ConnectionString": "mongodb://backend:v4qeYGFbqvXAeZSx@recruitment.isfit.org:27017",
     "DatabaseName": "RecWeb"
   },
   "Logging": {
