--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "scripts": {
     "start": "react-scripts start",
