--- a/backend/RecAPI/Dockerfile
+++ b/backend/RecAPI/Dockerfile
@@ -1,4 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 COPY bin/Release/netcoreapp3.1/publish App/
 WORKDIR /App
+
+EXPOSE 5001
+
 ENTRYPOINT [ "dotnet", "RecAPI.dll" ]
