--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -25,7 +25,8 @@
     "react-spinners": "^0.9.0",
     "react-tabs": "^4.0.1",
     "redux": "^4.0.5",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "use-sound": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
